<resources>
    <string name="app_name">Come and taste</string>
    <string name="settings_title">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="listDefValue">r</string>
    <string name="listKey">SortBy</string>
    <string name="listTitle">Sort by</string>
    <string name="listEntry1">Popular</string>
    <string name="listEntry2">Top rated</string>
    <string name="listEntry3">Favourites</string>
    <string name="edit_defValue">chickens</string>
    <string name="edit_key">ingredKey</string>
    <string name="next">Next Page</string>
    <string name="previous">Previous Page</string>
    <string name="ed_page_title">page number</string>
    <string name="ed_page_key">pages</string>
    <string name="ed_page_defValue">1</string>
    <string name="edit_title">ingredients in mind</string>
    <string name="listEntryVal1" translatable="false">t</string>
    <string name="listEntryVal2" translatable="false">r</string>
    <string name="listEntryVal3" translatable="false">f</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title">Recipe Name</string>
    <string name="rank">Social Ranking</string>
    <string name="ingredients">Ingredients</string>
    <string name="rec_details">Recipe Details</string>
    <string name="content_desc">recipe picture</string>
    <string name="content_desc1">app name</string>
    <string name="action_share">Share</string>
    <string name="details_button">go to source page</string>
    <string name="transition_name">transition</string>
    <string name="widget_description">update picture</string>
    <string name="network_message">network is not available</string>
    <string name="summary_empty">no value</string>
    <string name="invalid_number">please enter a valid number</string>
    <string name="number_input">please enter a value between 1 and 3500</string>
    <string name="invalid_ingredient">please enter a valid ingredient name</string>
    <string name="favourite_message">no items in the favourites list</string>

    <string name="message">no results found please make sure you have entered a valid ingredients name (just use letters and spaces) and look at the previous pages because sometimes a specific ingredient is limited by specific number of pages</string>

    <string name="star_description">store or delete from favourites list</string>
</resources>
